--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -16,6 +16,7 @@
 @import "userModal.scss";
 @import "./promosAdmin";
 @import "./couponAdmin";
+@import '../css/presencial/presential';
 
 * {
     margin: 0;
