--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -28,6 +28,7 @@
 @import './adminClinica/linkUserModal';
 @import './adminClinica/tutorDetailModal';
 @import './adminClinica/verTutores';
+@import './adminClinica/agenda';
 @import './adminVentas/cajaDiaria';
 @import './adminVentas/resumenSemanal';
 
